tests/reference/asr-test_set_object3-680b593.stderr
semantic error: Unhashable type: 'set'
 --> tests/errors/test_set_object3.py:4:17
  |
4 |     my_set: set[set[i32]] = {{1, 2}, {3, 4}}
  |                 ^^^^^^^^ Mutable type 'set' cannot be stored in a set.
